Styles second screen cards and fixes layout bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,28 +18,46 @@ h1 {
     background-size: cover;
   }
 
-  header {
-    background-color: transparent;
-  }
-
   #start-screen {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 80vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 80vh;
+    }
+    
+    .btn {
+        margin: 10px;
+    }
+    
+    /* .modal{
+        display: "block";
+    } */
+
+    header {
+      background-color: transparent;
+      margin-left: 25px;
+      margin-right: 25px;
+    }
+  
+  #logo-sm {
+    height: 70px;
   }
 
-  .btn {
-    margin: 10px;
-  }
+  /* #go-back {
 
-  /* .modal{
-    display: "block";
   } */
 
+  #second-screen-row {
+    flex-wrap: nowrap;
+    margin: 10px;
+    padding: 20px;
+  }
   #content-card {
     padding-bottom: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: rgba(255, 255, 255, .5);
   }
 
   #card-body {
@@ -47,3 +65,26 @@ h1 {
      flex-wrap: nowrap;
      justify-content: space-around;
   }
+
+  .thumbs {
+    border: 0px;
+    background-color: transparent;
+  }
+
+  .fa-solid {
+    opacity: 0.75;
+  }
+
+  .fa-solid:hover {
+    box-shadow: 0 12px 10px 0 rgba(0,0,0,0.3),0 17px 25px 0 rgba(0,0,0,0.19);
+    opacity: 1
+  }
+
+  .fa-lg {
+    font-size: 5em !important;
+  }
+
+  aside.card {
+  background-color: rgba(255, 255, 255, .3);
+  }
+
